Table vehicle {
    vin            char(17) [pk]
    calibration_id char(20)
    cvn            char(20)
    ecu_name       char(20)
}

Table drive_cycle {
    id         integer [pk]
    vin        char(17) 
    start_time timestamp [default: `now()`]
    end_time   timestamp
}

Table live_sample {
    id                  integer [pk]
    vin                 char(17) 
    _timestamp          timestamp [default: `now()`]
    rpm                 float
    speed               float
    engine_load         float
    throttle_pos        float
    _map                float
    short_fuel_trim_1   float
    short_fuel_trim_2   float
    long_fuel_trim_1    float
    long_fuel_trim_2    float
    o2_b1s1             float
    o2_b2s1             float
    o2_b1s2             float
    o2_b2s2             float
    timing_advance      float
    run_time            float
    coolant_temp        float
    intake_temp         float
    ambient_air_temp    float
    fuel_level          float
    barometric_pressure float
    distance_w_mil      float
}

Table freeze_frame {
    id                  integer [pk]
    vin                 char(17) 
    _timestamp          timestamp [default: `now()`]
    rpm                 float
    speed               float
    engine_load         float
    throttle_pos        float
    _map                float
    short_fuel_trim_1   float
    short_fuel_trim_2   float
    long_fuel_trim_1    float
    long_fuel_trim_2    float
    o2_b1s1             float
    o2_b2s1             float
    o2_b1s2             float
    o2_b2s2             float
    timing_advance      float
    run_time            float
    coolant_temp        float
    intake_temp         float
    ambient_air_temp    float
    fuel_level          float
    barometric_pressure float
    distance_w_mil      float
}

Table dtc {
    id              integer [pk]
    vin             char(17)
    code            char(5) [not null]
    freeze_frame_id integer [ref: - freeze_frame.id, null]
    cleared_at      timestamp
}

Ref: vehicle.vin < drive_cycle.vin  [delete: cascade, update: cascade]
Ref: vehicle.vin < live_sample.vin  [delete: cascade, update: cascade]
Ref: vehicle.vin < freeze_frame.vin [delete: cascade, update: cascade]
Ref: vehicle.vin < dtc.vin          [delete: cascade, update: cascade]

